--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <button id="show-text">showText</button>
             <p>Some hidden text</p>
         </li>
-        <li><button id="about-me">dataAboutMe</button></li>
+        <li><button class="some-class" id="about-me">dataAboutMe</button></li>
         <li><button class="some-btn">just button</button></li>
     </ul>
     <ul class="links-list">
